pattern no campo de nome de usuário

--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@ button:hover {
 .User-profile small {
   display: block;
   margin-top: 15px;
+  font-variant: small-caps;
 }
 
 .User-location404 {
